GNOME Bugzilla – Bug 628296
abort() in gsocketconnection.c
Last modified: 2010-08-30 13:37:57 UTC
Just got this pressing back on the browser. (gdb) t a a bt
+ Trace 223472
Actually I seem to be able to trivially reproduce this... 1) Load planet.gnome.org 2) Press Esc while it loads 3) Kaboom ephy/webkit/soup/glib all from master
caused by code rearrangement for the proxy stuff. fixed